--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">FScanner</string>
     <string name="action_settings">Settings</string>
-    <string name="new_scan">New scanning</string>
+    <string name="new_scan">New scan</string>
     <string name="value_scan">Scanned valued</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="hello_world">Hello world!</string>
@@ -11,5 +11,12 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_activity_scan">ScanActivity</string>
+    <string name="history">History</string>
+    <string name="help_scan">Point the device camera at the code</string>
+    <string name="save">Save</string>
+    <string name="save_result">Save result</string>
+    <string name="save_result_message">Your file will be saved on Documents folder.</string>
+    <string name="cancel">Cancel</string>
+    <string name="save_result_success">saved file successfully</string>
 
 </resources>
